--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 <p>Инструмент для версионированной сборки документации и примеров библиотек для проектов bem-info legoa-www.</p>
 
-<h3>
-<a name="%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0" class="anchor" href="#%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0"><span class="octicon octicon-link"></span></a>Установка</h3>
+<h2>
+<a name="%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0" class="anchor" href="#%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0"><span class="octicon octicon-link"></span></a>Установка</h2>
 
 <ul>
 <li>клонировать репозиотрий <code>git clone git://github.com/bem/bem-data-source.git</code>
@@ -47,33 +47,29 @@
 
 <ul>
 <li><code>config/credentials.json</code></li>
-</ul><h3>
-<a name="%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" class="anchor" href="#%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5"><span class="octicon octicon-link"></span></a>Конфигурирование</h3>
+</ul><h2>
+<a name="%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" class="anchor" href="#%D0%9A%D0%BE%D0%BD%D1%84%D0%B8%D0%B3%D1%83%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5"><span class="octicon octicon-link"></span></a>Конфигурирование</h2>
 
 <p>Конфигурация инструмента описывается в файлах <code>config/config.json</code>, <code>config/credentials.json</code>.</p>
 
-<h4>
-<a name="%D0%A4%D0%B0%D0%B9%D0%BB-configconfigjson" class="anchor" href="#%D0%A4%D0%B0%D0%B9%D0%BB-configconfigjson"><span class="octicon octicon-link"></span></a>Файл config/config.json</h4>
+<h3>
+<a name="%D0%A4%D0%B0%D0%B9%D0%BB-configconfigjson" class="anchor" href="#%D0%A4%D0%B0%D0%B9%D0%BB-configconfigjson"><span class="octicon octicon-link"></span></a>Файл config/config.json</h3>
 
 <ul>
 <li>
-<code>logLevel</code> - флаг уровня логгирования.</li>
-</ul><h4>
-<a name="%D0%A4%D0%B0%D0%B9%D0%BB-configcredentialsjson" class="anchor" href="#%D0%A4%D0%B0%D0%B9%D0%BB-configcredentialsjson"><span class="octicon octicon-link"></span></a>Файл config/credentials.json</h4>
+<code>logLevel</code> - флаг уровня логгирования. может принимать значения: ("verbose", "debug", "info", "warn", "error")</li>
+<li>
+<code>languages</code> - массив локалей</li>
+</ul><h3>
+<a name="%D0%A4%D0%B0%D0%B9%D0%BB-configcredentialsjson" class="anchor" href="#%D0%A4%D0%B0%D0%B9%D0%BB-configcredentialsjson"><span class="octicon octicon-link"></span></a>Файл config/credentials.json</h3>
 
 <p>Файл с токенами доступа к публичным и приватным репозиториям (github.com и github.yandex-team.ru соответственно)
 Необходимо сгенерировать токены доступа в настройках профиля пользователя на github.com и github.yandex.team.ru
 и вставить как значения соответствующих token-полей в данном файле.</p>
 
 <pre><code>"credentials": {
-    "public": {
-        "type": "oauth",
-        "token": ""
-    },
-    "private": {
-        "type": "oauth",
-        "token": ""
-    }
+    "public": "",
+    "private": ""
 }
 </code></pre>
 
@@ -81,15 +77,27 @@
 в который будет помещен результат сборки, например:</p>
 
 <pre><code>"dataConfig": {
-    "private": "false",
+    "private": false,
     "user": "bem",
     "repo": "bem-info-libs",
     "ref": "master"
 }
 </code></pre>
 
-<h4>
-<a name="%D0%A4%D0%B0%D0%B9%D0%BB-configpatternjs" class="anchor" href="#%D0%A4%D0%B0%D0%B9%D0%BB-configpatternjs"><span class="octicon octicon-link"></span></a>Файл config/pattern.js</h4>
+<p>Здесь: </p>
+
+<ul>
+<li>
+<code>private</code> - обозначает github хост на котором хранитс репозиторий. <code>false</code> - для публичного гитхаба
+<code>github.com</code> и <code>true</code> - для корпоративного гитхаба.</li>
+<li>
+<code>user</code> - имя пользователя или название организации.</li>
+<li>
+<code>repo</code> - название рапозитория</li>
+<li>
+<code>ref</code> - название ветки (по умолчанию "master")</li>
+</ul><h3>
+<a name="%D0%A4%D0%B0%D0%B9%D0%BB-configpatternjs" class="anchor" href="#%D0%A4%D0%B0%D0%B9%D0%BB-configpatternjs"><span class="octicon octicon-link"></span></a>Файл config/pattern.js</h3>
 
 <p>В этом файле описываются для каждой библиотеки можно переопределить дефолтные настройки сборки, например:</p>
 
@@ -119,28 +127,28 @@
             jsdoc: '%s.jsdoc.html'
         },
     },    
-    skip: []
+    tasks: []
 }
 </code></pre>
 
 <p>Здесь:</p>
 
-<h5>
-<a name="builder" class="anchor" href="#builder"><span class="octicon octicon-link"></span></a>builder</h5>
+<h4>
+<a name="builder" class="anchor" href="#builder"><span class="octicon octicon-link"></span></a>builder</h4>
 
 <p>Название инструмента с помощью которого будет выполняться сборка документации и примеров.</p>
 
 <p>Допустимые значения <code>enb</code> и <code>bem-tools</code>. 
 Значение по умолчанию <code>bem-tools</code>.</p>
 
-<h5>
-<a name="command" class="anchor" href="#command"><span class="octicon octicon-link"></span></a>command</h5>
+<h4>
+<a name="command" class="anchor" href="#command"><span class="octicon octicon-link"></span></a>command</h4>
 
 <p>Cтрока с названием команды для запуска сборки. 
 Значение по умолчанию <code>npm run build</code></p>
 
-<h5>
-<a name="copy" class="anchor" href="#copy"><span class="octicon octicon-link"></span></a>copy</h5>
+<h4>
+<a name="copy" class="anchor" href="#copy"><span class="octicon octicon-link"></span></a>copy</h4>
 
 <p>Массив с шаблонами названий директорий с файлами документации и примеров, 
 которые должны попасть в финальный результат сборки. 
@@ -149,8 +157,8 @@
 
 <p>Значение по умолчанию <code>['*.sets']</code></p>
 
-<h5>
-<a name="docs" class="anchor" href="#docs"><span class="octicon octicon-link"></span></a>docs</h5>
+<h4>
+<a name="docs" class="anchor" href="#docs"><span class="octicon octicon-link"></span></a>docs</h4>
 
 <p>Объект с полями, которые в свою очередь также являются объектами.
 Позволяет задавать произвольный набор документов которые должны попасть в сборку библиотеки</p>
@@ -182,8 +190,8 @@
 <p>Из данного примера видно, что можно задавать разные файлы для различных языков, а также указывать
 произвольный url к файлу как адрес данного файла в браузере.</p>
 
-<h5>
-<a name="pattern" class="anchor" href="#pattern"><span class="octicon octicon-link"></span></a>pattern</h5>
+<h4>
+<a name="pattern" class="anchor" href="#pattern"><span class="octicon octicon-link"></span></a>pattern</h4>
 
 <p>Объект с полями <code>data</code> и <code>jsdoc</code> в котором можно указать шаблоны файлов с документацией и js документацией к блокам. </p>
 
@@ -195,26 +203,38 @@
 }
 </code></pre>
 
-<h5>
-<a name="skip" class="anchor" href="#skip"><span class="octicon octicon-link"></span></a>skip</h5>
+<h4>
+<a name="tasks" class="anchor" href="#tasks"><span class="octicon octicon-link"></span></a>tasks</h4>
 
-<p>Массив с именами шагов сборки которые не должны быть выполнены для текущей библиотеки. </p>
+<p>Массив с коммандами которые будут выполнены для данной цели сборки 
+в таком же порядке в каком они указаны в массиве.</p>
 
-<p>Допустимые элементы массива: </p>
+<h3>
+<a name="%D0%9E%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5-%D0%BA%D0%BE%D0%BC%D0%BC%D0%B0%D0%BD%D0%B4-%D0%B4%D0%BB%D1%8F-%D1%81%D0%B1%D0%BE%D1%80%D0%BA%D0%B8" class="anchor" href="#%D0%9E%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5-%D0%BA%D0%BE%D0%BC%D0%BC%D0%B0%D0%BD%D0%B4-%D0%B4%D0%BB%D1%8F-%D1%81%D0%B1%D0%BE%D1%80%D0%BA%D0%B8"><span class="octicon octicon-link"></span></a>Описание комманд для сборки:</h3>
+
+<p>Примечание: <code>{lib}</code> - название библиотеки, <code>{ref}</code> - тег или ветка.</p>
 
 <ul>
-<li>'npmInstall' </li>
-<li>'npmInstallBemSets' </li>
-<li>'npmInstallBem' </li>
-<li>'npmRunDeps'</li>
-<li>'copyBorschik' </li>
-<li>'npmRunBuild'</li>
-<li>'copySets'</li>
-<li>'collectSets'.</li>
-</ul><h3>
-<a name="%D0%97%D0%B0%D0%BF%D1%83%D1%81%D0%BA" class="anchor" href="#%D0%97%D0%B0%D0%BF%D1%83%D1%81%D0%BA"><span class="octicon octicon-link"></span></a>Запуск</h3>
+<li>'removeOutput' - удаляет папку <code>/output/{lib}/{ref}</code>.</li>
+<li>'createOutput' - создает папку <code>/output/{lib}/{ref}</code>.</li>
+<li>'gitClone' - клонирует проект из гитхаба в директорию <code>/content/{lib}/{ref}</code>. </li>
+<li>'gitCheckout' - переключает git на ветку или тег <code>{ref}</code>. </li>
+<li>'npmCacheClean' - отчищает кеш npm.</li>
+<li>'npmInstall' - устанавливает npm зависимости.</li>
+<li>'npmInstallBemSets' - устанавливает актуальную версию bem-sets.</li>
+<li>'npmInstallBem' - устанавливает актуальную версию bem-tools.</li>
+<li>'npmRunDeps' - запускает скрипт с алиасом 'npm run deps' в <code>package.json</code> файле.</li>
+<li>'copyBorschik' - копирует файл <code>.borschik</code> в <code>/content/{lib}/{ref}</code>.</li>
+<li>'npmRunBuild' - запускает скрипт указанный в параметре <code>command</code> для данной библотеки.
+По умолчанию запускает скрипт с алиасом 'npm run build' в <code>package.json</code> файле.</li>
+<li>'copySets' - копирует папки с собранными файлами в <code>/output/{lib}/{ref}</code>
+</li>
+<li>'collectSets' - собирает данные в единый файл <code>/output/{lib}/{ref}/data.json</code>
+</li>
+</ul><h2>
+<a name="%D0%97%D0%B0%D0%BF%D1%83%D1%81%D0%BA" class="anchor" href="#%D0%97%D0%B0%D0%BF%D1%83%D1%81%D0%BA"><span class="octicon octicon-link"></span></a>Запуск</h2>
 
-<p>Запуск выполняется командой <code>node bin/start.js</code> с указанием дополнительных опций:</p>
+<p>Запуск выполняется командой <code>node index.js</code> с указанием дополнительных опций:</p>
 
 <ul>
 <li>
@@ -227,7 +247,9 @@
 <code>-t</code> или <code>--tags</code> - название версии (тега) библиотеки</li>
 <li>
 <code>-b</code> или <code>--branches</code> - название ветки библиотеки</li>
-</ul><p>Ответственный за разработку @bemer</p>
+</ul><p>Посмотреть текущую версию приложения можно выполнив команду: <code>node index.js -v</code></p>
+
+<p>Ответственный за разработку @bemer</p>
 
 <p>Вопросы и пожелания присылать по адресу: <a href="mailto:bemer@yandex-team.ru">bemer@yandex-team.ru</a></p>
       </section>
