--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>Bem-data-source by bem</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Bem-data-source</h1>
+        <p class="header">Tool for collect documentation and exaples from libraries and common sources for bem-info and legoa</p>
 
-    <header>
-      <div class="container">
-        <h1>Bem-data-source</h1>
-        <h2>Tool for collect documentation and exaples from libraries and common sources for bem-info and legoa</h2>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/bem/bem-data-source/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/bem/bem-data-source/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/bem/bem-data-source">View On GitHub</a></li>
+        </ul>
 
-        <section id="downloads">
-          <a href="https://github.com/bem/bem-data-source/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/bem/bem-data-source/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/bem/bem-data-source" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/bem">bem</a></p>
 
-    <div class="container">
-      <section id="main_content">
+
+      </header>
+      <section>
         <h1>
 <a name="bem-data-source" class="anchor" href="#bem-data-source"><span class="octicon octicon-link"></span></a>bem-data-source</h1>
 
@@ -253,8 +255,11 @@
 
 <p>Вопросы и пожелания присылать по адресу: <a href="mailto:bemer@yandex-team.ru">bemer@yandex-team.ru</a></p>
       </section>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
     </div>
-
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
